# bark-infinity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MOBILE.md  QUICKSTART.md  README.md  RELEASE.md  VICTOR_AGI_LLM.py  VictorNeuroforgeMonolith.py  VictorPrimeEmergentFusionMonolithGUI-STABLE.py  bark_perform.py  bark_streamlit.py  bark_webui.py  digital_evolution.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-pip.txt  test_quantization.py  v1000.0.0-SINGULARITY-FIRESEED.py  v1001.0.0-NEUROFORGE-BARK-CORE.py  victor_bark_fusion_gui.py
.github/workflows/: ci-cd.yml
bark_infinity/: __init__.py  cli.py  error_handling.py  fusion_transformer.py  quantization.py
bark_infinity/ui/: style.css
examples/: README.md  basic_usage.py  low_compute_mode.py
notebooks/: google_colab_upgraded.ipynb
scripts/: build_docker.sh  build_windows.sh  release.sh
